--- a/servicio-item-1.properties
+++ b/servicio-item-1.properties
@@ -1,2 +1,4 @@
 server.port=8005
-configuracion.texto=configurando ambiente desarrollo 
+configuracion.texto=configurando ambiente desarrollo
+Feign.hystrix.enable=true
+management.endpoints.web.exposure.include="*" 
