configurando ambiente con puerto dinamico

--- a/servicio-item-1.properties
+++ b/servicio-item-1.properties
@@ -1,2 +1,2 @@
-server.port=8005
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 configuracion.texto=configurando ambiente desarrollo
