--- a/servicio-item-1.properties
+++ b/servicio-item-1.properties
@@ -1,2 +1,3 @@
+server.port=${PORT:0}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 configuracion.texto=configurando ambiente desarrollo
