--- a/servicio-item-1-desarrollo.properties
+++ b/servicio-item-1-desarrollo.properties
@@ -1,3 +1,3 @@
 configuracion.texto=configurando ambiente de Desarrollo
 configuracion.autor.nombre=Hector
-configuracion.email=hectormeneses@unicauca.edu.co
+configuracion.autor.email=hectormeneses@unicauca.edu.co
