--- a/servicio-item-1-desarrollo.properties
+++ b/servicio-item-1-desarrollo.properties
@@ -1,3 +1,3 @@
-configuracion.texto=configurando ambiente de Desarrollo
-configuracion.autor.nombre=Hector
-configuracion.autor.email=hectormeneses@unicauca.edu.co
+configuracion.texto=configurando ambiente de Desarrollo ...
+configuracion.autor.nombre=jhon Doe
+configuracion.autor.email=jhondoe@unicauca.edu.co
