--- a/servicio-item-1.properties
+++ b/servicio-item-1.properties
@@ -1,3 +1,2 @@
-server.port=${PORT:0}
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+server.port=8005
 configuracion.texto=configurando ambiente por defecto
