--- a/servicio-item-1-desarrollo.properties
+++ b/servicio-item-1-desarrollo.properties
@@ -1,3 +1,3 @@
 configuracion.texto=configurando ambiente de Desarrollo ...
-configuracion.autor.nombre=hector
-configuracion.autor.email=hector@unicauca.edu.co
+configuracion.autor.nombre=Jhon Doe
+configuracion.autor.email=jhondoe@unicauca.edu.co
